--- a/project/templates/products/products_admin.html
+++ b/project/templates/products/products_admin.html
@@ -1,29 +1,39 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <section class="container-fluid p-sm-5 p-0 pt-5 h-section">
+    <section class="container-fluid py-2 h-section">
 
-        <h1 class="fw-bolder display-5 mb-4 text-uppercase text-center">Productos</h1>
-       
-        <div class="mb-2">
-            <a class="btn btn-success" hx-get="{% url 'products:product_create' %}" hx-target="#dialog"><i class="fas fa-plus"></i> Agregar</a>
-            <button class="btn btn-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class="fas fa-filter"></i> Filtrar</button>
-        </div>
-    
-        <div class="row">
-            <div 
-                class="col-12" 
-                id="results"
-                hx-get="{% url 'products:load_product_list_admin' %}" 
-                hx-trigger="load" 
-                hx-target="#results"
-            >
-            </div>
-        </div>
-        
-        {% url 'products:product_list' as url %}
-        {% include 'components/index_back.html' with link=url %}    
+        <div class="p-0 p-sm-3 p-md-5 py-2">
 
+                <nav aria-label="breadcrumb px-0 px-md-5">
+                    <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="{% url 'products:product_list' %}"><i class="fas fa-home"></i> Inicio</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Administración</li>
+                    </ol>
+                </nav>
+
+                <h1 class="fw-bolder display-5 mb-4 text-uppercase text-center">Productos</h1>
+            
+                <div class="mb-2">
+                    <a class="btn btn-success" hx-get="{% url 'products:product_create' %}" hx-target="#dialog"><i class="fas fa-plus"></i> Agregar</a>
+                    <button class="btn btn-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i class="fas fa-filter"></i> Filtrar</button>
+                </div>
+            
+                <div class="row">
+                    <div 
+                        class="col-12" 
+                        id="results"
+                        hx-get="{% url 'products:load_product_list_admin' %}" 
+                        hx-trigger="load" 
+                        hx-target="#results"
+                    >
+                    </div>
+                </div>
+                
+                {% url 'products:product_list' as url %}
+                {% include 'components/index_back.html' with link=url %}    
+
+        </div>
 
         <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
             <div class="offcanvas-header">
