--- a/project/static_dev/css/styles.css
+++ b/project/static_dev/css/styles.css
@@ -20,7 +20,7 @@
 .btn{
     font-weight: 600;
 }
-.active{
+.active-nav{
     text-decoration: underline 3px rgb(0, 0, 0);
 }
 
@@ -68,13 +68,9 @@
 
 }
 .fondo{
-    background-image: linear-gradient(180deg, rgba(238, 238, 238, 0.8) 40%, rgba(216, 215, 215, 0.8) 100%);
-    background-color: rgb(245, 245, 245);
-}
+    background-image: linear-gradient(to bottom, #f2f2f2, #f0f0f0, #ededed, #ebebeb, #e9e9e9);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.074);
 
-.fondo2{
-    background-image: linear-gradient(180deg, rgba(186, 186, 186, 0.632) 100%, rgba(238, 238, 238, 0.8) 40%);
-    background-color: rgb(245, 245, 245);
 }
 
 .bg-card{
