--- a/project/templates/products/contact.html
+++ b/project/templates/products/contact.html
@@ -5,13 +5,21 @@
 {% block content %}
 <section id="contacto" class="container-fluid text-center fondo py-2">
     <div class="p-3 p-md-5">
-            <div class="align-items-center justify-content-center revelar">
-                <h1 class="display-5 brand fw-bold advent-pro">Contactanos</h1>
-                <p class="fw-medium fs-5 text-center pb-3">¡Gracias por visitar MUNDO CUOTAS! Si tienes alguna pregunta O consulta, no dudes en ponerte en contacto y nos comunicaremos contigo a la brevedad.</p>
-                <div class="col-lg-6 mx-auto w-100" hx-get="{% url 'users:message_create' %}" hx-trigger="load, messageListChanged from:body" hx-target="this">
-                </div>
-    
-            </div>    
+        <div class="px-0 px-md-5">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item"><a href="{% url 'products:product_list' %}"><i class="fas fa-home"></i> Inicio</a></li>
+                  <li class="breadcrumb-item active" aria-current="page">Contacto</li>
+                </ol>
+            </nav>
+            <h1 class="display-5 brand fw-bold advent-pro">Contactanos</h1>
+                <div class="align-items-center justify-content-center revelar">
+                    <p class="fw-medium fs-5 text-center pb-3">¡Gracias por visitar MUNDO CUOTAS! Si tienes alguna pregunta O consulta, no dudes en ponerte en contacto y nos comunicaremos contigo a la brevedad.</p>
+                    <div class="col-lg-6 mx-auto w-100" hx-get="{% url 'users:message_create' %}" hx-trigger="load, messageListChanged from:body" hx-target="this">
+                    </div>
+        
+                </div>    
+            </div>
         </div>
     </div>
 </section>
