se corrige margenes e templates

--- a/project/templates/products/about.html
+++ b/project/templates/products/about.html
@@ -3,17 +3,17 @@
 {% load widget_tweaks %}
 
 {% block content %}
-<section id="contacto" class="container-fluid text-center fondo">
+<section class="container-fluid py-3 fondo">
     <div class="p-3 p-md-5">
+        <div class="px-0 px-md-5">
 
-            <div class="align-items-center justify-content-center revelar px-0 px-md-5">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                       <li class="breadcrumb-item"><a href="{% url 'products:product_list' %}"><i class="fas fa-home"></i> Inicio</a></li>
                       <li class="breadcrumb-item active" aria-current="page">Sobre nosotros</li>
                     </ol>
                 </nav>
-                <h1 class="display-5 brand fw-bold advent-pro">Sobre Mundo Cuotas</h1>
+                <h1 class="display-5 brand fw-bold advent-pro text-center">Sobre Mundo Cuotas</h1>
 
                 <div class="row py-3">
                     <div class="col-12 col-md-6">
@@ -38,7 +38,6 @@
                         </p>
                     </div>
                 </div>
-            </div>    
         </div>
     </div>
 </section>
