--- a/project/templates/products/index.html
+++ b/project/templates/products/index.html
@@ -6,7 +6,7 @@
     <div class="px-4 py-5 text-center" style="background-color: rgba(176, 112, 206, 0.203);">
 
         <img src="{% static 'img/logo.png' %}" alt="Mundo Cuotas" width="95" class="d-block mx-auto revelar izquierda">
-        <h1 class="display-5 fw-bold text-body-emphasis brand revelar izquierda advent-pro">
+        <h1 class="display-5 fw-bold text-body-emphasis brand revelar izquierda">
             Comprá en cuotas solo con tu firma
         </h1>
     
