--- a/project/templates/products/product_detail.html
+++ b/project/templates/products/product_detail.html
@@ -4,87 +4,99 @@
 {% block content %}
 
         <!-- Product section-->
-        <section class="py-5 fondo">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 align-items-center">
-                <div class="col-md-6">
-                    <div id="carousel" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner text-center">
-                            {% for file in product.files.all %}
-                                <div class="carousel-item {% if forloop.first %}active{% endif %}" style="background-color: rgba(0, 0, 0, 0.034);">
-                                    {% with file_type=file.file|determine_file_type %}
-                                        {% if file_type == 'image' %}
-                                        <img src="{{ file.file.url }}" class="card-img-top mb-5 mb-md-0" alt="{{ file.file.name }}" style="height: 400px; width:100%; object-fit:contain;">
-                                        {% elif file_type == 'video' %}
-                                        <video src="{{ file.file.url }}" class="card-img-top mb-5 mb-md-0" alt="{{ file.file.name }}" style="height: 400px; width:100%; object-fit:contain;"></video>
-                                        {% endif %}
-                                    {% endwith %}
-                                </div>
-                            {% endfor %}
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
-                    </div>
-                </div>
+        <section class="container-fluid py-3 fondo">
+            <div class="p-3 p-md-5">
+                <div class="px-0 px-md-5">
+
+
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb">
+                          <li class="breadcrumb-item"><a href="{% url 'products:product_list' %}"><i class="fas fa-home"></i> Inicio</a></li>
+                          <li class="breadcrumb-item active" aria-current="page">{{ product.name }}</li>
+                        </ol>
+                    </nav>
+                    <div class="row gx-4 gx-lg-5 align-items-center">
                     <div class="col-md-6">
-                        <div class="small mb-1">
-                            {% if product.type == 2 %}
-                                Producto en oferta
-                            {% elif product.type == 3 %}
-                                Producto destacado
-                            {% endif %}                        
+                        <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner text-center">
+                                {% for file in product.files.all %}
+                                    <div class="carousel-item {% if forloop.first %}active{% endif %}" style="background-color: rgba(0, 0, 0, 0.034);">
+                                        {% with file_type=file.file|determine_file_type %}
+                                            {% if file_type == 'image' %}
+                                            <img src="{{ file.file.url }}" class="card-img-top mb-5 mb-md-0" alt="{{ file.file.name }}" style="height: 400px; width:100%; object-fit:contain;">
+                                            {% elif file_type == 'video' %}
+                                            <video src="{{ file.file.url }}" class="card-img-top mb-5 mb-md-0" alt="{{ file.file.name }}" style="height: 400px; width:100%; object-fit:contain;"></video>
+                                            {% endif %}
+                                        {% endwith %}
+                                    </div>
+                                {% endfor %}
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
                         </div>
-                        <h1 class="display-5 fw-bolder advent-pro">{{ product.name }}</h1>
-                        <p class="fs-6">{{ product.description }}</p>
-                        {% if product.price_cash %}
-                            <div class="fs-6 my-2">
-                                <span>Contado ${{ product.price_cash|format_number_with_commas:2 }}</span>
-                                {% if product.price_12_weeks %}
-                                    <br>
-                                    <span>12 semanas de ${{ product.price_12_weeks|format_number_with_commas:2 }}</span>  
-                                {% endif %}
-                                {% if product.price_6_fortnights %}
-                                    <br>
-                                    <span>6 quincenas de ${{ product.price_6_fortnights|format_number_with_commas:2 }}</span>
-                                {% endif %}
-                                {% if product.price_3_months %}
-                                    <br>
-                                    <span>3 meses de ${{ product.price_3_months|format_number_with_commas:2 }}</span>
-                                {% endif %}
-                            </div>    
-                        {% endif %}
-                        
-                        <div class="d-flex">
-                            <a class="btn btn-success flex-shrink-0" href="https://wa.me/542494547860" target="_blank" rel="nofollow noopener noreferrer">
-                                <i class="fas fa-shopping-cart"></i>
-                                Comprar
-                            </a>
+                    </div>
+                        <div class="col-md-6">
+                            <div class="small mb-1">
+                                {% if product.type == 2 %}
+                                    Producto en oferta
+                                {% elif product.type == 3 %}
+                                    Producto destacado
+                                {% endif %}                        
+                            </div>
+                            <h1 class="display-5 fw-bolder advent-pro">{{ product.name }}</h1>
+                            <p class="fs-6">{{ product.description }}</p>
+                            {% if product.price_cash %}
+                                <div class="fs-6 my-2">
+                                    <span>Contado ${{ product.price_cash|format_number_with_commas:2 }}</span>
+                                    {% if product.price_12_weeks %}
+                                        <br>
+                                        <span>12 semanas de ${{ product.price_12_weeks|format_number_with_commas:2 }}</span>  
+                                    {% endif %}
+                                    {% if product.price_6_fortnights %}
+                                        <br>
+                                        <span>6 quincenas de ${{ product.price_6_fortnights|format_number_with_commas:2 }}</span>
+                                    {% endif %}
+                                    {% if product.price_3_months %}
+                                        <br>
+                                        <span>3 meses de ${{ product.price_3_months|format_number_with_commas:2 }}</span>
+                                    {% endif %}
+                                </div>    
+                            {% endif %}
+                            
+                            <div class="d-flex">
+                                <a class="btn btn-success flex-shrink-0" href="https://wa.me/542494547860" target="_blank" rel="nofollow noopener noreferrer">
+                                    <i class="fas fa-shopping-cart"></i>
+                                    Comprar
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+                </div>
         </section>
 
 
         {% if related_products %}
-            <section class="py-5 fondo">
-                <div class="container px-4 px-lg-5">
-                    <h3 class="fw-semibold border-bottom text-uppercase fs-4 advent-pro">Productos relacionados</h3>
-                    <div class="row gx-3 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-start">
-                    
-                        {% for product in related_products %}
-                            {% include 'products/partials/product_card.html' %}
-                        {% endfor %}
+            <section class="container-fluid py-3 fondo">
+                <div class="p-3 p-md-5">
+                    <div class="px-0 px-md-5">
+                        <h3 class="fw-semibold border-bottom text-uppercase fs-4 advent-pro">Productos relacionados</h3>
+                        <div class="row gx-3 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-start">
+                        
+                            {% for product in related_products %}
+                                {% include 'products/partials/product_card.html' %}
+                            {% endfor %}
+                        </div>
                     </div>
-                </div>
-                <div class="text-center">
-                    <a href="{% url 'products:product_list' %}" class="btn btn-outline-dark" style="width: 320px;"> Ver mas productos</a>
+                    <div class="text-center">
+                        <a href="{% url 'products:product_list' %}" class="btn btn-outline-dark" style="width: 320px;"> Ver mas productos</a>
+                    </div>
                 </div>
             </section>
         {% endif %}        
