se corrige index.hmtl

--- a/project/templates/products/about.html
+++ b/project/templates/products/about.html
@@ -19,7 +19,7 @@
                     <div class="col-12 col-md-6">
                         <h2 class="brand fw-bold advent-pro">¿Quiénes somos?</h2>
                         <p class="text-start fs-6">
-                            Somos Mundo Cuotas, una empresa joven que nace con la misión de brindar productos de calidad directamente desde fábrica con formas de financiación accesible y sin complicaciones innecesarias.<br>
+                            Somos Mundo Cuotas, una empresa joven que nace con la misión de brindar productos de calidad directamente de fábrica con formas de financiación accesible y sin complicaciones innecesarias.<br>
                             Nuestro compromiso es que cada cliente obtenga la mejor experiencia de compra posibe. Por eso, estamos comprometidos a brindar una experiencia de compra excepcional a nuestros clientes, ofreciendo productos de alta calidad y con distintas formas de financiación. 
                         </p>
 
