--- a/project/templates/products/partials/product_list.html
+++ b/project/templates/products/partials/product_list.html
@@ -5,7 +5,7 @@
     
     <div class="p-3 p-md-5">
         <div class="container mt-2">
-                <h3 class="fw-semibold border-bottom text-uppercase fs-4">
+                <h3 class="fw-semibold border-bottom text-uppercase fs-4 advent-pro">
                     {% if category_object %}
                         {{category_object.parent.name}} - {{category_object.name}}
                         {% if type %}
