--- a/project/static_dev/css/styles.css
+++ b/project/static_dev/css/styles.css
@@ -1,14 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Advent+Pro:wdth@150&display=swap');
-
 *{
     scroll-behavior: smooth;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: "Roboto", sans-serif;
-
 }
-
 .advent-pro, .nav-link, .dropdown-item, .btn{
     font-family: "Advent Pro", sans-serif;
     font-optical-sizing: auto;
@@ -20,21 +17,12 @@
 .btn{
     font-weight: 600;
 }
-.active-nav{
-    text-decoration: underline 3px rgb(0, 0, 0);
-}
-
-
 .login-form{
     width: 450px;
-
 }
-
-
 .icon-navbar{
     width: 50px;
 }
-
 .icon-avatar{
     width: 30px;
     height: 30px;
@@ -42,10 +30,8 @@
     object-fit: cover;
     object-position: center;
 }
-
 .brand, .username{
     color: rgb(123, 86, 149);
-
 }
 .brand:hover{
     color: rgb(146, 109, 172);
@@ -53,32 +39,26 @@
 .search-navbar{
     max-width: 500px;  
 }
-
 .bg-header{
     background-image:url('../img/fondo.jpeg');
     background-size:cover;
 }
-
 .card, .btn, .form-control{
     border-radius: 2px;
 }
-
 .card{
     background-color: rgba(251, 251, 251, 0.573)!important;
-
+    box-shadow: 3px 3px 5px 0px rgba(199,199,199,0.75);
+    -webkit-box-shadow: 2px 3px 5px 0px rgba(199,199,199,0.75);
+    -moz-box-shadow: 2px 3px 5px 0px rgba(199,199,199,0.75);
 }
 .fondo{
     background-image: linear-gradient(to bottom, #f2f2f2, #f0f0f0, #ededed, #ebebeb, #e9e9e9);
     border-bottom: 1px solid rgba(0, 0, 0, 0.074);
-
 }
-
 .bg-card{
     background-color: rgba(251, 251, 251, 0.527)!important;
 }
-
-
-
 .checkeable input {
     display: none;
 }
@@ -93,37 +73,32 @@
 .checkeable input:checked + img {
     border-color:  rgb(255, 0, 0);
 }
-
 .notification{
     font-size:11px;
 }
-
 .active-nav{
     text-decoration: underline 3px;
 }
-
 .dropdown-toggle::after {  
     content: none;
 }
-
 textarea{
     resize: none;
     height: 150px!important;
 }
-
-
+.h-section{
+    min-height: 100vh;
+}
 @media (max-width: 454px) {
     .notification{
         font-size:9px;
     }
-
 }   
 @media (max-width: 500px) {
     .login-form{
         width: 100%;
     }
 }
-
 @media (max-width: 600px) {
     .ocultar{
         display: none;
