--- a/project/templates/components/contact_footer.html
+++ b/project/templates/components/contact_footer.html
@@ -1,5 +1,5 @@
 <div class="container-fluid p-md-5 p-5 pb-5 fondo">
-    <div class="row gx-4 gx-lg-5 revelar">
+    <div class="row gx-4 gx-lg-5">
         <div class="col-md-4 mb-3 mb-md-0">
             <div class="card py-4 h-100">
                 <div class="card-body text-center">
