--- a/project/templates/components/navbar.html
+++ b/project/templates/components/navbar.html
@@ -114,5 +114,16 @@
 {% endif %}
 
 
-
-
+<script>
+    const navLinks = document.querySelectorAll('.nav-link');
+    const currentPath = window.location.pathname;
+    
+    navLinks.forEach(link => {
+      const linkPath = link.getAttribute('href');
+          if (currentPath === linkPath) {
+        link.classList.add('active');
+      } else {
+        link.classList.remove('active');
+      }
+    })();
+</script>
