--- a/project/templates/products/contact.html
+++ b/project/templates/products/contact.html
@@ -13,8 +13,8 @@
                 </ol>
             </nav>
             <h1 class="display-5 brand fw-bold advent-pro text-center">Contactanos</h1>
-                <div class="align-items-center justify-content-center revelar">
-                    <p class="fw-medium fs-5 text-center pb-3">¡Gracias por visitar MUNDO CUOTAS! Si tienes alguna pregunta O consulta, no dudes en ponerte en contacto y nos comunicaremos contigo a la brevedad.</p>
+                <div class="align-items-center justify-content-center">
+                    <p class="fw-medium fs-6 text-center pb-3">¡Gracias por visitar MUNDO CUOTAS! Si tienes alguna pregunta O consulta, no dudes en ponerte en contacto y nos comunicaremos contigo a la brevedad.</p>
                     <div class="col-lg-6 mx-auto w-100" hx-get="{% url 'users:message_create' %}" hx-trigger="load, messageListChanged from:body" hx-target="this">
                     </div>
         
