--- a/project/templates/users/message_list.html
+++ b/project/templates/users/message_list.html
@@ -27,7 +27,9 @@
         
         <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">FILTROS</h5>
+                <h5 class="offcanvas-title fs-5 advent-pro fw-bold border-bottom" id="offcanvasWithBothOptionsLabel">                
+                    <i class="bi bi-filter fs-5 fw-semibold me-2"></i>
+                    Filtrar mensajes</h5>
               <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
@@ -41,30 +43,30 @@
                     </div>
 
                             <div class="form-group">
-                                <p class="mt-3 mb-2 fw-semibold border-bottom fs-5">Estado</p>
+                                <p class="mt-3 mb-2 fw-semibold border-bottom fs-5 advent-pro">Estado</p>
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" name="status" onclick="onlyOneStatus(this)" value="3" id="status3">
-                                    <label class="form-check-label" for="status3">Todos</label>
+                                    <label class="form-check-label fw-semibold advent-pro" for="status3">Todos</label>
                                 </div> 
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" name="status" onclick="onlyOneStatus(this)" value="1" id="status1">
-                                    <label class="form-check-label" for="status1">No leidos</label>
+                                    <label class="form-check-label fw-semibold advent-pro" for="status1">No leidos</label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" name="status" onclick="onlyOneStatus(this)" value="2" id="status2">
-                                    <label class="form-check-label" for="status2">Leidos</label>
+                                    <label class="form-check-label fw-semibold advent-pro" for="status2">Leidos</label>
                                 </div>
                             </div>
 
                         <div class="form-group">
-                            <p class="mt-3 mb-2 fw-semibold border-bottom fs-5">Fecha</p>
+                            <p class="mt-3 mb-2 fw-semibold border-bottom fs-5 advent-pro">Fecha</p>
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" name="date" onclick="onlyOneDate(this)" value="1" id="date1">
-                                <label class="form-check-label" for="date1">Recientes</label>
+                                <label class="form-check-label fw-semibold advent-pro" for="date1">Recientes</label>
                             </div>
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" name="date" onclick="onlyOneDate(this)" value="2" id="date2">
-                                <label class="form-check-label" for="date2">Antiguos</label>
+                                <label class="form-check-label fw-semibold advent-pro" for="date2">Antiguos</label>
                             </div>
                         </div>
 
