--- a/project/templates/users/message_detail.html
+++ b/project/templates/users/message_detail.html
@@ -16,7 +16,7 @@
             <li class="list-group-item"><strong>Fecha:</strong> {{ message.email }}</li>
             <li class="list-group-item"><strong>Email:</strong> {{ message.date }}</li>
             <li class="list-group-item"><strong>Leido:</strong> <i class="fa fa-check text-success"></i></li>
-            <li class="list-group-item"><strong>Mensaje:</strong> {{ message.content }}</li>
+            <li class="list-group-item"><strong>Mensaje:</strong> {{ message.content|linebreaks }}</li>
 
         </ul>
 
