--- a/project/templates/products/product_detail_admin.html
+++ b/project/templates/products/product_detail_admin.html
@@ -76,7 +76,7 @@
                         </div>    
                     </div>   
                 {% endif %}
-                <p class="fs-6">{{ product.description }}</p>
+                <p class="fs-6">{{ product.description|linebreaks }}</p>
             </div>
         </div>
 
